--- a/templates/competitions/sponsor_logo_form.html
+++ b/templates/competitions/sponsor_logo_form.html
@@ -2,8 +2,9 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container-fluid" style="background: linear-gradient(to bottom, #222222, #444444);">
-<div class="container-fluid" style="background: linear-gradient(to bottom, #222222, #444444);">
+    
+<div class="container-fluid p-3 d-flex justify-content-center" style="background: linear-gradient(45deg, #222222, #555555);">
+<div class="container py-5" style="background: linear-gradient(45deg, #222222, #555555); min-height: 100vh;">
   <div class="row align-items-center justify-content-center">
     <div class="col-md-11">
       <div class="card shadow-lg p-5" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.9);">
