--- a/templates/base.html
+++ b/templates/base.html
@@ -180,6 +180,11 @@ footer {
             <li class="nav-item">
               <a class="nav-link" href="{% url 'accounts:profile_update' %}">Profile</a>
             </li>
+              {% if user.role == "organizer" %}
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'competitions:organizer_competitions' %}">My Competitions</a>
+            </li>
+                  {% endif %}
             <li class="nav-item">
               <form action="{% url 'accounts:logout' %}" method="post" id="logout-form" style="display: none;">
                 {% csrf_token %}
