--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -262,7 +262,7 @@
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="{% url 'competitions:competition_score' competition.pk %}" class="btn btn-outline-info w-100 py-3">
+                        <a href="{% url 'competitions:event_list' competition.pk %}" class="btn btn-outline-info w-100 py-3">
                             <i class="bi bi-bar-chart"></i><br>
                             Manage Scores
                         </a>
