--- a/templates/registration/athlete_profile.html
+++ b/templates/registration/athlete_profile.html
@@ -124,6 +124,12 @@
                           {{ event.name }}{% if not forloop.last %}, {% endif %}
                           {% endfor %}
                         </td>
+                          <td>
+                            <a href="{% url 'competitions:competition_overlay' competition.competition.pk user.pk %}" 
+                               class="btn btn-primary btn-sm">
+                               View Overlay
+                            </a>
+                        </td>
                       </tr>
                       {% endfor %}
                     </tbody>
